working before adding head control

--- a/SSDI.RequestMonitoring.UI/JComponents/Alerts/Alert.razor
+++ b/SSDI.RequestMonitoring.UI/JComponents/Alerts/Alert.razor
@@ -3,7 +3,7 @@
     <div class="custom-alert @GetAlertClass() animate__fadeInDown">
         <div class="alert-content">
             <i class="@GetIconClass()"></i>
-            <span>@Message</span>
+            <span>@((MarkupString)Message)</span>
         </div>
 
         @if (ShowCloseButton)
