--- a/SSDI.RequestMonitoring.UI/Layout/MainLayout.razor
+++ b/SSDI.RequestMonitoring.UI/Layout/MainLayout.razor
@@ -9,6 +9,7 @@
                 @Body
             </div>
         </FluentBodyContent>
+        <FluentToastProvider MaxToastCount="10" />
     </FluentStack>
 </FluentLayout>
 
