--- a/SSDI.RequestMonitoring.UI/Layout/Navbar.razor
+++ b/SSDI.RequestMonitoring.UI/Layout/Navbar.razor
@@ -1,4 +1,5 @@
 ﻿@using SSDI.RequestMonitoring.UI.Contracts
+@using SSDI.RequestMonitoring.UI.Helpers.States
 @inject IAuthenticationSvc authService
 @inject NavigationManager navManager
 @inject CurrentUser currentUser
